# backend

./: .dockerignore  .gitignore  Dockerfile  app.py  docker-compose.yaml  flake.nix  pyproject.toml  shop.db
.github/workflows/: docker-image.yml
